[package]
name = "p4-cmd"
version = "0.1.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "P4 API (wraps CLI)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epage/p4-cmd"
homepage = "https://github.com/epage/p4-cmd"
documentation = "https://docs.rs/p4-cmd"
readme = "README.md"
categories = ["development-tools", "api-bindings"]
keywords = ["p4", "perforce"]

[dependencies]
chrono = "0.4"
nom = "4.0"
